@@ -6,17 +6,16 @@ plugins {
 dependencies {
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.12.0")
 
-    implementation(kotlin("stdlib"))
-    implementation(kotlin("reflect"))
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.5.30")
     implementation("com.squareup.moshi:moshi-kotlin-codegen:1.12.0")
     implementation("com.github.slugify:slugify:2.5")
     implementation("org.apache.commons:commons-text:1.9")
 
-    api("com.github.cs125-illinois.jeed:core:2021.8.2")
-    api("com.github.cs125-illinois:jenisol:2021.8.0")
-    api("io.kotest:kotest-runner-junit5:4.6.1")
+    api("com.github.cs125-illinois.jeed:core:2021.9.0")
+    api("com.github.cs125-illinois:jenisol:2021.9.0")
+    api("io.kotest:kotest-runner-junit5:4.6.2")
     api("com.google.truth:truth:1.1.3")
-    api("com.github.cs125-illinois:libcs1:2021.8.0")
+    api("com.github.cs125-illinois:libcs1:2021.8.1")
 }
 tasks {
     val sourcesJar by creating(Jar::class) {
@@ -36,5 +35,10 @@ publishing {
 }
 kapt {
     includeCompileClasspath = false
+    javacOptions {
+        option("--illegal-access", "permit")
+    }
 }
-
+kotlin {
+    kotlinDaemonJvmArgs = listOf("-Dfile.encoding=UTF-8", "--illegal-access=permit")
+}
