@@ -13,18 +13,17 @@ plugins {
 dependencies {
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.12.0")
 
-    implementation(kotlin("stdlib"))
-    implementation(kotlin("reflect"))
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.5.30")
     implementation(project(":lib"))
 
-    implementation("io.ktor:ktor-server-netty:1.6.2")
+    implementation("io.ktor:ktor-server-netty:1.6.3")
     implementation("com.squareup.moshi:moshi-kotlin-codegen:1.12.0")
     implementation("com.github.cs125-illinois:ktor-moshi:1.0.3")
     implementation("com.github.slugify:slugify:2.5")
     implementation("org.mongodb:mongodb-driver:3.12.10")
 
-    implementation("org.slf4j:slf4j-api:1.7.31")
-    implementation("ch.qos.logback:logback-classic:1.2.3")
+    implementation("org.slf4j:slf4j-api:1.7.32")
+    implementation("ch.qos.logback:logback-classic:1.2.5")
     implementation("io.github.microutils:kotlin-logging:2.0.11")
 }
 task("createProperties") {
@@ -56,4 +55,11 @@ docker {
 }
 kapt {
     includeCompileClasspath = false
+    javacOptions {
+        option("--illegal-access", "permit")
+    }
 }
+kotlin {
+    kotlinDaemonJvmArgs = listOf("-Dfile.encoding=UTF-8", "--illegal-access=permit")
+}
+
